--- a/style.css
+++ b/style.css
@@ -19,8 +19,49 @@ th{
   width: 120px;
   height: 800px;
   border: solid 1px black;
+  text-align:center;
 }
 
 #canales_id{
-  width: 240px;
+  width: 275px;
+}
+
+td{
+  text-align:center;
+}
+
+#canal_1{
+  margin: auto;
+  text-align:center;
+}
+
+.load, .pfl, .mute, .main{
+  padding: auto;
+  width: 60px;
+  height: 25px;
+  border: solid 1px black;
+}
+
+.gain, .aux{
+  padding: auto;
+  width: 400px;
+  height: 80px;
+  border-radius: 75px;
+  border: solid 1px black;
+}
+
+.slider{
+  width: 120px;
+  height: 300px;
+  border: solid 1px black;
+}
+
+#txt, td{
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#title{
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
 }
