--- a/style.css
+++ b/style.css
@@ -56,6 +56,31 @@ td{
   border: solid 1px black;
 }
 
+#slider_ch1{
+  transform: rotate(-90deg);
+  display:flex;
+  text-indent: 2em;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  height: 5px;
+  border-radius: 5px;
+  background: rgba(10, 10, 10, 0.9);
+  opacity: 0.7;
+
+}*/
+
 #txt, td{
   font-size: small;
   font-family: Arial, Helvetica, sans-serif;
